--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,28 +1,28 @@
 <div class="main-content">
     <div class="row" *ngIf="adminRole == 'Customer'">
         <div class="col-md-12">
-          <div class="card ">
-            <div class="card-body ">
-              <div class="row">
-                <div class="col-md-12">
-                  <div class=" page-carousel">
-                    <ngb-carousel>
-                      <ng-template ngbSlide *ngFor="let b of topban">
-                        <img src="http://localhost:8090{{b.bannersimage}}" style="height:40%;width:100%;"
-                          alt="Random first slide">
-                        <div class="carousel-caption">
+            <div class="card ">
+                <div class="card-body ">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class=" page-carousel">
+                                <ngb-carousel>
+                                    <ng-template ngbSlide *ngFor="let b of topban">
+                                        <img src="http://localhost:8090{{b.bannersimage}}"
+                                            style="height:40%;width:100%;" alt="Random first slide">
+                                        <div class="carousel-caption">
+                                        </div>
+                                    </ng-template>
+                                </ngb-carousel>
+                            </div>
                         </div>
-                      </ng-template>
-                    </ngb-carousel>
-                  </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
+    </div>
     <div class="row">
-        
+
         <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openCustomer()">
                 <div class="card-body ">
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-      
+
         <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
             <div class="card card-stats" (click)="openCustomerService()">
                 <div class="card-body ">
@@ -129,7 +129,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
-            <div class="card card-stats" >
+            <div class="card card-stats">
                 <div class="card-body ">
                     <div class="row">
                         <div class="col-5 col-md-4">
@@ -180,7 +180,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openDaily()">
                 <div class="card-body">
@@ -286,7 +286,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
-            <div class="card card-stats" >
+            <div class="card card-stats">
                 <div class="card-body ">
                     <div class="row">
                         <div class="col-5 col-md-4">
@@ -437,7 +437,8 @@
                                 <th class="text-right">Actions</th>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let item of appointmentList | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
+                                <tr
+                                    *ngFor="let item of appointmentList | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
 
                                     <td class="text-center">{{ item.index }}</td>
                                     <td class="text-center">{{ item.fname}} {{ item.lname}} </td>
@@ -450,10 +451,12 @@
                                             Completed
                                         </button>
                                     </td>
-                                    <td class="text-center" style="color: black; font-weight: 500 !important">{{ item.totalprice }} ₹
+                                    <td class="text-center" style="color: black; font-weight: 500 !important">{{
+                                        item.totalprice }} ₹
                                     </td>
                                     <td class="text-center">
-                                        <button class="btn btn-success" *ngIf="item.isactive==true" data-toggle="modal" data-target="#customerPaymentModal" (click)="modeOfPayment(item)">
+                                        <button class="btn btn-success" *ngIf="item.isactive==true" data-toggle="modal"
+                                            data-target="#customerPaymentModal" (click)="modeOfPayment(item)">
                                             <i class="fa fa-inr" aria-hidden="true"></i> Accept
                                         </button>
                                         <!-- <button class="btn btn-info" *ngIf="item.isactive==false" disabled>
@@ -484,7 +487,8 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="ml-md-auto">
-                            <mat-paginator [length]="appointmentList.length" [pageSize]="pageSize" [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedAppoi($event)">
+                            <mat-paginator [length]="appointmentList.length" [pageSize]="pageSize"
+                                [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedAppoi($event)">
                             </mat-paginator>
                         </div>
                     </div>
@@ -518,10 +522,12 @@
                                     <td class="text-center">{{ item.index }}</td>
                                     <td class="text-center">{{ item.fname}} {{ item.lname}} </td>
                                     <!-- <td class="text-center">{{ item.empname }}</td> -->
-                                    <td class="text-center" style="color: black; font-weight: 500 !important">{{ item.totalprice }} ₹</td>
+                                    <td class="text-center" style="color: black; font-weight: 500 !important">{{
+                                        item.totalprice }} ₹</td>
                                     <td class="text-center">
-                                        <button type="button" class="btn btn-info btn-round ml5" (click)="generatecompateappoinmentpdf(item)"><i
-                                        class="fa fa-file-pdf-o"></i>Invoice(PDF)</button>
+                                        <button type="button" class="btn btn-info btn-round ml5"
+                                            (click)="generatecompateappoinmentpdf(item)"><i
+                                                class="fa fa-file-pdf-o"></i>Invoice(PDF)</button>
                                     </td>
                                 </tr>
                             </tbody>
@@ -531,7 +537,8 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="ml-md-auto">
-                            <mat-paginator [length]="completedAppointment.length" [pageSize]="pageSize" [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedComAp($event)">
+                            <mat-paginator [length]="completedAppointment.length" [pageSize]="pageSize"
+                                [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedComAp($event)">
                             </mat-paginator>
                         </div>
                     </div>
@@ -575,7 +582,8 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="ml-md-auto">
-                            <mat-paginator [length]="enquiryList.length" [pageSize]="pageSize" [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedEnquiry($event)">
+                            <mat-paginator [length]="enquiryList.length" [pageSize]="pageSize"
+                                [pageSizeOptions]="[pageSizeOptions]" (page)="onPageChangedEnquiry($event)">
                             </mat-paginator>
                         </div>
                     </div>
@@ -584,7 +592,8 @@
         </div>
     </div>
 
-    <div class="modal fade" id="customerServicesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="customerServicesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-xl modal-notice">
             <div class="modal-content">
                 <div class="modal-header">
@@ -604,7 +613,8 @@
                                 <th class="text-center">Service Point</th>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let item of usedServices |  paginate: { id:'model_pagination',itemsPerPage: 10, currentPage: modelPage,totalItems:totalModelRecords }">
+                                <tr
+                                    *ngFor="let item of usedServices |  paginate: { id:'model_pagination',itemsPerPage: 10, currentPage: modelPage,totalItems:totalModelRecords }">
                                     <td class="text-center">{{ item.index }}</td>
                                     <td class="text-center">{{ item.servicesname}}</td>
                                     <td class="text-center">{{ item.employeename}}</td>
@@ -630,7 +640,8 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="fname" name="fname" disabled value="{{totalPriceForDetails}} ₹" />
+                                <input type="text" class="form-control" id="fname" name="fname" disabled
+                                    value="{{totalPriceForDetails}} ₹" />
                             </div>
                         </div>
                         <div class="col-md-2">
@@ -639,7 +650,8 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="tPoints" name="tPoints" disabled value="{{totalPointForDetails}}" />
+                                <input type="text" class="form-control" id="tPoints" name="tPoints" disabled
+                                    value="{{totalPointForDetails}}" />
                             </div>
                         </div>
 
@@ -654,7 +666,8 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="customerPaymentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="customerPaymentModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header justify-content-center">
@@ -676,20 +689,24 @@
                         </div>
                     </div>
                     <div class="row justify-content-center">
-                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal" (click)="saveModeOfPaymentDetails('Cash')"><i class="fa fa-money"
+                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal"
+                                (click)="saveModeOfPaymentDetails('Cash')"><i class="fa fa-money"
                                     aria-hidden="true"></i> Cash</button>
                         </div>
 
-                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal" (click)="saveModeOfPaymentDetails('GPay')"><i class="fa-google-pay"
+                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal"
+                                (click)="saveModeOfPaymentDetails('GPay')"><i class="fa-google-pay"
                                     aria-hidden="true"></i>
                                 GPay</button></div>
-                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal" (click)="saveModeOfPaymentDetails('Account')"><i class="fa fa-bank"
+                        <div class="col-sm-4"><button class="btn btn-success btn-lg" data-dismiss="modal"
+                                (click)="saveModeOfPaymentDetails('Account')"><i class="fa fa-bank"
                                     aria-hidden="true"></i>
                                 Bank AC</button></div>
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-sm-4"></div>
-                        <div class="col-sm-4"><button class="btn btn-info btn-round ml5" data-dismiss="modal" (click)="generatepdf()"><i class="fa fa-file-pdf-o"></i>
+                        <div class="col-sm-4"><button class="btn btn-info btn-round ml5" data-dismiss="modal"
+                                (click)="generatepdf()"><i class="fa fa-file-pdf-o"></i>
                                 Invoice(PDF)</button>
                         </div>
                         <div class="col-sm-4"></div>
@@ -703,7 +720,7 @@
             </div>
         </div>
     </div>
-    <div style="margin-top: -93px;" *ngIf="adminRole == 'Customer'" >
+    <div style="margin-top: -93px;" *ngIf="adminRole == 'Customer'">
         <app-offer></app-offer>
     </div>
     <div class="card" *ngIf="adminRole == 'Customer'">
@@ -729,15 +746,23 @@
                         <th class="text-center">Total Price</th>
                         <th class="text-center">Total Point</th>
                         <th class="text-center">Appointment Date</th>
+                        <th class="text-center">Rating</th>
                         <th class="text-right">Actions</th>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let item of customerData |  paginate: { id:'listing_pagination',itemsPerPage: 5, currentPage: page,totalItems:totalRecords }">
+                        <tr
+                            *ngFor="let item of customerData |  paginate: { id:'listing_pagination',itemsPerPage: 5, currentPage: page,totalItems:totalRecords }">
                             <td class="text-center">{{ item.index }}</td>
                             <!-- <td class="text-center">{{ item.empname}}</td> -->
                             <td class="text-center">{{ item.totalprice }}</td>
                             <td class="text-center">{{ item.totalpoint }}</td>
                             <td class="text-center">{{ item.createddate | date }}</td>
+                            <td class="text-center">
+                                <div class="stars">
+                                
+                                </div>
+                            </td>
+
                             <td class="text-right">
                                 <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm">
                                     <i class="fa fa-eye" data-toggle="modal" data-target="#customerServicesModal"
@@ -752,14 +777,16 @@
         <div class="card-footer">
             <div class="row">
                 <div class="ml-md-auto">
-                    <pagination-controls id="listing_pagination" maxSize="5" directionLinks="true" (pageChange)="page= $event" autoHide="true" responsive="true">
+                    <pagination-controls id="listing_pagination" maxSize="5" directionLinks="true"
+                        (pageChange)="page= $event" autoHide="true" responsive="true">
                     </pagination-controls>
 
                 </div>
             </div>
         </div>
     </div>
-    <div class="modal fade" id="customerServicesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="customerServicesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-xl modal-notice">
             <div class="modal-content">
                 <div class="modal-header">
@@ -778,7 +805,8 @@
                                 <th class="text-center">Service Point</th>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let item of usedServices |  paginate: { id:'model_pagination',itemsPerPage: 10, currentPage: modelPage,totalItems:totalModelRecords }">
+                                <tr
+                                    *ngFor="let item of usedServices |  paginate: { id:'model_pagination',itemsPerPage: 10, currentPage: modelPage,totalItems:totalModelRecords }">
                                     <td class="text-center">{{ item.index }}</td>
                                     <td class="text-center">{{ item.servicesname}}</td>
                                     <td class="text-center">{{ item.price }}</td>
@@ -803,7 +831,8 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="fname" name="fname" disabled value="{{totalPriceForDetails}} ₹" />
+                                <input type="text" class="form-control" id="fname" name="fname" disabled
+                                    value="{{totalPriceForDetails}} ₹" />
                             </div>
                         </div>
                         <div class="col-md-2">
@@ -812,7 +841,8 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="tPoints" name="tPoints" disabled value="{{totalPointForDetails}}" />
+                                <input type="text" class="form-control" id="tPoints" name="tPoints" disabled
+                                    value="{{totalPointForDetails}}" />
                             </div>
                         </div>
 
@@ -827,7 +857,7 @@
             </div>
         </div>
     </div>
-   
+
 </div>
 
 
