--- a/src/app/display-products/display-products.component.html
+++ b/src/app/display-products/display-products.component.html
@@ -52,7 +52,7 @@
                         <div class="col-sm-6 col-md-6 col-xl-6">
                             <!-- <div [{ngModel}]="productsModel.name"></div> -->
                             <h5> {{selctpr.name}}</h5>
-                            <h4 class="me-1">${{selctpr.price}}</h4>
+                            <h4 class="me-1">₹ {{selctpr.price}}</h4>
                             <div class="d-flex flex-row">
                                 <div class="text-danger mb-1 me-2">
                                     <i class="fa fa-star"></i>
@@ -306,9 +306,6 @@
                         </div>
                     </div>
                     <div class="d-flex justify-content-between ">
-                        <div class="btn btn-primary buy " (click)="saveCart(a)">
-                            Buy Now
-                        </div>
                         <div class="btn-group btn-group-sm ">
                             <button class="btn btn-outline-default btn-round " (click)="decre(i) ">
                                 <i class="nc-icon nc-simple-delete "></i> </button>
@@ -319,6 +316,10 @@
                                 <i class="nc-icon nc-simple-add "></i> </button>
                             <!-- </b> -->
                         </div>
+                        <div class="btn btn-primary buy " (click)="saveCart(a)">
+                            Buy Now
+                        </div>
+                        
                     </div>
                 </div>
             </div>
