--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -8,9 +8,28 @@
     padding: 5%;
     height: 1em;
 }
-.points{
+
+.points {
     text-align: center !important;
     font-size: 16px !important;
-    font-weight:600 !important;
-    color: green !important    ;
+    font-weight: 600 !important;
+    color: green !important;
+}
+
+.cart-badge {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #fbc658;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 1rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 0.1rem;
 }
